--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
     padding: 10px;
     cursor: pointer;
     border: none;
-    background-color: #007BFF;
+    background-color: #d637f2;
     color: white;
 }
 .post {
@@ -29,4 +29,13 @@ img {
     width: 100%;
     max-height: 500px;
     object-fit: cover;
+}
+.delete-btn {
+    background-color: #f04848;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+    display: block;
 }
