--- a/index.css
+++ b/index.css
@@ -29,6 +29,30 @@ body {
     object-fit: contain;
 }
 
+.post {
+    background: rgba(255, 255, 255, 0.51);
+    color: black;
+    padding: 15px;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 800px;
+    text-align: left;
+}
+.button-box {
+    background: rgba(255, 192, 203, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    margin: 20px auto;
+}
+
 #glitter-video {
     position: fixed;
     top: 0;
@@ -36,13 +60,13 @@ body {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    z-index: -1; /* Move video behind content */
+    z-index: -1;
     opacity: 0.5;
     filter: blur(5px);
 }
 .top-bar {
     display: flex;
-    justify-content: center; /* Centers content */
+    justify-content: center;
     align-items: center;
     padding: 10px;
     background: #333;
@@ -50,7 +74,7 @@ body {
 }
 
 .top-bar h1 {
-    margin-left: 20px; /* Adjust this value for fine-tuning */
+    margin-left: 20px;
 }
 
 
@@ -59,7 +83,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background: rgba(191, 33, 226, 0.36);
+    background: rgba(185, 26, 185, 0.36);
     color: white;
     width: 100%;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
@@ -77,16 +101,10 @@ body {
 }
 
 .container {
-    width: 100%;
-    max-width: 900px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-    position: relative;
-    z-index: 1;
     justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .tab, #blog-posts {
@@ -111,7 +129,7 @@ body {
     margin: 10px;
     padding: 10px 20px;
     border: none;
-    background-color: #ff1493;
+    background-color: rgba(227, 26, 134, 0.8);
     color: white;
     border-radius: 5px;
     cursor: pointer;
