--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body {
     width: 100%;
     height: auto;
     object-fit: contain;
+    border-radius: 15px; /* Adjust this value for roundness */
 }
 
 .post {
